added minified vendor files

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
     </div>
 
   <script src="vendor/jquery.min.js"></script>
-  <script src="vendor/bootstrap.js"></script>
-  <script src="vendor/angular.js"></script>
-  <script src="vendor/angular-route.js"></script>
+  <script src="vendor/bootstrap.min.js"></script>
+  <script src="vendor/angular.min.js"></script>
+  <script src="vendor/angular-route.min.js"></script>
 
   <script src="angular/app.js"></script>
   <script src="angular/controllers/displayAll.js"></script>
