--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Game of Thrones</title>
     <link href="css/bootstrap.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet" >
-    <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
+    <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
   </head>
   <body>
 
